--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "gatsby-plugin-postcss": "^6.8.0",
+    "netlify-cli": "^13.2.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
   }
