--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-modal-video": "^2.0.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.1.0"
   },
   "repository": {
