Config.yml file Edit

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: dvsrshohan/gatsby
   branch: main
+  local_backend: true
   
 media_folder: public/images
 public_folder: /images
