--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -7,8 +7,8 @@ media_folder: public/images
 public_folder: /images
 
 collections:
-  - name: job
-    label: Job
+  - name: jobs
+    label: Jobs
     folder: src/jobs
     create: true
     fields:
