Config.yml file Edit

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
   name: github
   repo: dvsrshohan/gatsby
+  open_authoring: true
+      auth_endpoint: '/api/auth'
+      always_fork: true
   branch: main
   
 media_folder: public/images
