--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -5,7 +5,8 @@ backend:
       auth_endpoint: '/api/auth'
       always_fork: true
   branch: main
-  base_url: '/api/v1'
+  api_root: /api/v1
+  base_url: /api/v1
 
 media_folder: public/images
 public_folder: /images
