--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "daisyui": "^2.51.5",
     "gatsby": "^5.8.1",
     "gatsby-plugin-netlify-cms": "^7.9.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-source-filesystem": "^5.8.0",
     "gatsby-transformer-remark": "^6.8.0",
     "netlify-cms-app": "^2.15.72",
