--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,8 +3,7 @@ backend:
   repo: gatsby
   branch: main
   base_url: https://api.github.com
-  auth_type: token
-  token: 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
+  auth_type: implicit
 
 media_folder: public/images
 public_folder: /images
