--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   repo: gatsby
   branch: main
   base_url: https://api.github.com
-  auth_type: implicit
+  auth_type: personal_access_token
+  token: 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
 
 media_folder: public/images
 public_folder: /images
