--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,7 @@ backend:
    branch: main
    base_url: https://api.github.com
    auth_type: personal_access_token
-   token: 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
+   personal_access_token: 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
 
 media_folder: public/images
 public_folder: /images
